--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -27,7 +27,7 @@
         <div class="footer-features p-y-1 container-max" style="background-color:white;">
             <div class="row">
                
-                    <div class="col-xs-12 col-sm-3 text-xs-center" style="padding-top:10px;">
+                    <div class="col-xs-12 col-sm-4 text-xs-center" style="padding-top:12px;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} --><div style="text-align: left;">
                       <img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/frontend/layout/mb-muller-logo-148917414710.jpg" width="100px"><br>
 
@@ -40,8 +40,8 @@ Fax: +49 (0) 6221 33937-59<br>
 mail: info@mb-mueller.com<br>
 </div>
                     </div>
-                     <div class="col-xs-12 col-sm-4 text-xs-center" style="padding-top:10px;">
-                      <div style="text-align: left;"><h3>INFORMATION</h3> <br><br>
+                     <div class="col-xs-12 col-sm-3 text-xs-center" style="padding-top:12px;">
+                      <div style="text-align: left;"><h3><b>INFORMATION</b></h3> <br><br>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                          {% autoescape false %}
                     <a href="{{ urls.cancellationRights }}">{{ trans("Ceres::Template.footerCancellationRight", {"hyphen": "&shy;"}) }}</a>
@@ -58,10 +58,10 @@ mail: info@mb-mueller.com<br>
                     {% endif %}
                 {% endautoescape %}</div>
                     </div>
-                     <div class="col-xs-12 col-sm-5 text-xs-center" style="padding-top:10px;">
+                     <div class="col-xs-12 col-sm-5 text-xs-center" style="padding-top:12px;">
                       <div style="text-align: left;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                     <h3>NEWSLETTER</h3> <br><br>
+                     <h3><b>NEWSLETTER</B></h3> <br><br>
                      
                      <form accept-charset="UTF-8" action="#" autocomplete="off" method="GET" target="_blank">
 	<input name="name" type="text" value="E-Mail" /> <br /> 
@@ -77,18 +77,18 @@ mail: info@mb-mueller.com<br>
                
             </div>
         </div>
-      <div style="height:2px;"></div>
+      <div style="height:3px;"></div>
  
            <div class="footer-features p-y-1 container-max" style="background-color:white;">
             <div class="row">
                
-                    <div class="col-xs-12 col-sm-9 text-xs-center" style="text-align:left;">
+                    <div class="col-xs-12 col-sm-9 text-xs-center" style="padding-top:12px;"">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                        <div style="text-align: left;"><b>Copyright &copy; 2019 MBMüller</b></div>
                     </div>
-                    <div class="col-xs-12 col-sm-3 text-xs-center" style="align-items:right;">
+                    <div class="col-xs-12 col-sm-3 text-xs-center" style="padding-top:12px;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       <div style="text-align: left;">
+                       <div style="align-items: right;">
 		       <img src="http://www.beatinternet.de/mueller/img/paypal.png"> 
 		       <img src="http://www.beatinternet.de/mueller/img/master.png"> 
 		       <img src="http://www.beatinternet.de/mueller/img/visa.png"> 
