--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -1,14 +1,16 @@
 <header id="page-header" class="top-bar pos-f-t">
     <div>
         <div class="container-max">
+        <div class="hidden-xs" align="left;width:800px;">
+                Alles auf Lager |  Schnelle Lieferung | 24 Stunden Verfügbarkeit </div>
+        
             <div class="row" style="background-color:#000000;color:#ffffff;" >
                 {{ LayoutContainer.show("Ceres::Header.LeftSide") }}
 
                 <ul id="controlsList" class="controls-list list-inline">
                 
                 
-                <li><div class="hidden-xs" align="left;width:800px;">
-                Alles auf Lager |  Schnelle Lieferung | 24 Stunden Verfügbarkeit </div>
+                <li>
                 </li>
 
                     <li class="list-inline-item control-user">
