--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -42,8 +42,10 @@
     }
 </script>
 
-Testeintrag
 
+<div style="background-color:white;color:red;text-align:center;">
+Alles auf Lager | Schnelle Lieferung | Zahlung auch auf Rechnung
+</div>
 
 
 <div id="vue-app">
