--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -2,16 +2,21 @@
     <div>
         <div class="container-max">
        
+         <div class="row" style="background-color:#000000;color:#ffffff;" >
+         New Winter Sale Discount
+         
+        </div>
         
             <div class="row" style="background-color:#000000;color:#ffffff;" >
+            
+            
             
                 {{ LayoutContainer.show("Ceres::Header.LeftSide") }}
 
                 <ul id="controlsList" class="controls-list list-inline">
                 
                 
-                <li>
-                </li>
+                
 
                     <li class="list-inline-item control-user">
                         <user-login-handler>
