--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -706,7 +706,7 @@ code {
   padding: 0.2rem 0.4rem;
   font-size: 90%;
   color: #bd4147;
-  background-color: #f7f7f9;
+  background-color: #000000;
   border-radius: 0.1rem;
 }
 
