--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -77,7 +77,7 @@ mail: info@mb-mueller.com<br>
                
             </div>
         </div>
-      <div style="height:3px;"></div>
+      <div style="height:3px;background-color:grey;"></div>
  
            <div class="footer-features p-y-1 container-max" style="background-color:white;">
             <div class="row">
