--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -63,8 +63,37 @@ mail: info@mb-mueller.com<br>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                      <h3><b>NEWSLETTER</B></h3> <br><br>
                      
-                     <form accept-charset="UTF-8" action="#" autocomplete="off" method="GET" target="_blank">
-	<input name="name" type="text" value="E-Mail" /> <br /> 
+                     <!-- Begin Mailchimp Signup Form -->
+
+<div id="mc_embed_signup">
+<form action="https://mb-mueller.us20.list-manage.com/subscribe/post?u=d0b37fc68d080d595c27fda80&amp;id=1d23dfe188" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+<div class="indicates-required"><span class="asterisk"></span></div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="Ihre E-Mail Adresse" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d0b37fc68d080d595c27fda80_1d23dfe188" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+
+
+		     
+		     
+		     
+		     
+		     
+		     
+		     <br /> 
 </form>
 
 <br><br>
