css input field

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -72,7 +72,8 @@ mail: info@mb-mueller.com<br>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
 </label>
-	<input type="email" value="Ihre E-Mail Adresse" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="email" value="Ihre E-Mail Adresse" name="EMAIL" class="required email" id="mce-EMAIL" 
+	style="border: 1px solid black;border-radius: 0px;background-color:grey;">
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
