--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -71,14 +71,15 @@ mail: info@mb-mueller.com<br>
 <div class="indicates-required"><span class="asterisk"></span></div>
 <div class="mc-field-group">
 	<input type="email" value="Ihre E-Mail Adresse" name="EMAIL" class="required email" id="mce-EMAIL" 
-	style="border: 1px solid black;border-radius: 0px;background-color:grey;">
-</div>
+	style="border: 5px solid black;border-radius: 0px;background-color:white;color:grey;width:280px;">
+</div><br>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d0b37fc68d080d595c27fda80_1d23dfe188" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" style="border: 1px solid black;border-radius: 0px;background-color:white;"></div>
+    <div class="clear"><input type="submit" value="eintragen" name="subscribe" id="mc-embedded-subscribe" class="button" 
+    style="border: 5px solid black;border-radius: 0px;background-color:white;color:grey;width:280px;"></div>
     </div>
 </form>
 </div>
