--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -82,7 +82,7 @@ mail: info@mb-mueller.com<br>
     
     <!--
     <input type="submit" value="eintragen" name="subscribe" id="mc-embedded-subscribe" class="button" 
-    style="border: 5px solid black;border-radius: 0px;background-color:white;color:grey;width:280px;"> -->
+    style="border: 1px solid black;border-radius: 5px;background-color:white;color:lightgrey;width:280px;"> -->
     
     </div>
     </div>
