input aus sichtbereich

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -80,9 +80,9 @@ mail: info@mb-mueller.com<br>
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d0b37fc68d080d595c27fda80_1d23dfe188" tabindex="-1" value=""></div>
     <div class="clear">
     
-    <!--
+    
     <input type="submit" value="eintragen" name="subscribe" id="mc-embedded-subscribe" class="button" 
-    style="border: 1px solid black;border-radius: 5px;background-color:white;color:lightgrey;width:280px;"> -->
+    style="border: 1px solid black;border-radius: 5px;background-color:white;color:lightgrey;width:280px;position: absolute; left: -9999px">
     
     </div>
     </div>
