--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -124,10 +124,19 @@ mail: info@mb-mueller.com<br>
                     <div class="col-xs-12 col-sm-3 text-xs-center" style="padding-top:10px;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                        <div style="align-items:right;">
-		       <img src="http://www.beatinternet.de/mueller/img/paypal.png"> 
-		       <img src="http://www.beatinternet.de/mueller/img/master.png"> 
-		       <img src="http://www.beatinternet.de/mueller/img/visa.png"> 
-		       <img src="http://www.beatinternet.de/mueller/img/am.png"> 
+		       
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/paypal.png">
+		       </div>
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/visa.png">
+		       </div>
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/master.png">
+		       </div>
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/am.png">
+		       </div>
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/vorkasse.png">
+		       </div>
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/rechnung.png">
+		       </div>
 		       </div>
                    </div>
             </div>
