--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -114,7 +114,7 @@ mail: info@mb-mueller.com<br>
       
  
            <div class="footer-features p-y-1 container-max" style="background-color:white;">
-	   <div style="height:2px;background-color:grey;"></div>
+	   <div style="height:2px;background-color:9E9E9E;"></div>
             <div class="row">
                
                     <div class="col-xs-12 col-sm-6 text-xs-center" style="padding-top:10px;">
