font-weight:bold;

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -71,7 +71,8 @@ mail: info@mb-mueller.com<br>
 <div class="indicates-required"><span class="asterisk"></span></div>
 <div class="mc-field-group">
 	<input type="email" value="    Ihre E-Mail Adresse" name="EMAIL" class="required email" id="mce-EMAIL" 
-	style="border: 1px solid black;border-radius: 0px;background-color:#F2F2F2;color:#9E9E9E;width:250px;height:35px;margin:3px;font-face:bold;">
+	style="border: 1px solid black;border-radius: 0px;background-color:#F2F2F2;color:#9E9E9E;width:250px;height:35px;margin:3px;
+	font-weight:bold;">
 </div><br>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
