--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -71,7 +71,7 @@ mail: info@mb-mueller.com<br>
 <div class="indicates-required"><span class="asterisk"></span></div>
 <div class="mc-field-group">
 	<input type="email" value="    Ihre E-Mail Adresse" name="EMAIL" class="required email" id="mce-EMAIL" 
-	style="border: 1px solid black;border-radius: 0px;background-color:#F2F2F2;color:#9E9E9E;width:250px;height:35px;margin:3px;
+	style="border: 1px solid black;border-radius: 0px;background-color:#f6f6f6;color:#b4b4b4;width:250px;height:35px;margin:3px;
 	font-weight:bold;">
 </div><br>
 	<div id="mce-responses" class="clear">
@@ -115,7 +115,7 @@ mail: info@mb-mueller.com<br>
       
  
            <div class="footer-features p-y-1 container-max" style="background-color:white;">
-	   <div style="height:2px;background-color:9E9E9E;"></div>
+	   <div style="height:2px;background-color:#f6f6f6;"></div>
             <div class="row">
                
                     <div class="col-xs-12 col-sm-6 text-xs-center" style="padding-top:10px;">
