--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -41,7 +41,7 @@ mail: info@mb-mueller.com<br>
 </div>
                     </div>
                      <div class="col-xs-12 col-sm-3 text-xs-center" style="padding-top:12px;">
-                      <div style="text-align: left;"><h3><b>INFORMATION</b></h3> <br><br>
+                      <div style="text-align: left;line-height: 1.8;"><h3><b>INFORMATION</b></h3> <br><br>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                          {% autoescape false %}
                     <a href="{{ urls.cancellationRights }}">{{ trans("Ceres::Template.footerCancellationRight", {"hyphen": "&shy;"}) }}</a>
