--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -23803,58 +23803,28 @@ html.ie .wrapper-main .basket-item-container .basket-item-container-right .qty-b
   width: 100% !important;
 }
 
-.widget-payment-provider.widget-primary {
-  color: #fff;
-  background-color: #008ebd;
+.widget-payment-provider.widget-primary > .cmp-method-list .method-list-item > label, .widget-shipping-profile.widget-primary > .cmp-method-list .method-list-item > label {
+  box-shadow: inset 0 0 0 0.1rem #008ebd;
 }
 
-.widget-payment-provider.widget-primary a {
-  color: #fff;
+.widget-payment-provider.widget-secondary > .cmp-method-list .method-list-item > label, .widget-shipping-profile.widget-secondary > .cmp-method-list .method-list-item > label {
+  box-shadow: inset 0 0 0 0.1rem #d4021d;
 }
 
-.widget-payment-provider.widget-secondary {
-  color: #fff;
-  background-color: #d4021d;
+.widget-payment-provider.widget-success > .cmp-method-list .method-list-item > label, .widget-shipping-profile.widget-success > .cmp-method-list .method-list-item > label {
+  box-shadow: inset 0 0 0 0.1rem #28a745;
 }
 
-.widget-payment-provider.widget-secondary a {
-  color: #fff;
+.widget-payment-provider.widget-info > .cmp-method-list .method-list-item > label, .widget-shipping-profile.widget-info > .cmp-method-list .method-list-item > label {
+  box-shadow: inset 0 0 0 0.1rem #17a2b8;
 }
 
-.widget-payment-provider.widget-success {
-  color: #fff;
-  background-color: #28a745;
+.widget-payment-provider.widget-warning > .cmp-method-list .method-list-item > label, .widget-shipping-profile.widget-warning > .cmp-method-list .method-list-item > label {
+  box-shadow: inset 0 0 0 0.1rem #ffc107;
 }
 
-.widget-payment-provider.widget-success a {
-  color: #fff;
-}
-
-.widget-payment-provider.widget-info {
-  color: #fff;
-  background-color: #17a2b8;
-}
-
-.widget-payment-provider.widget-info a {
-  color: #fff;
-}
-
-.widget-payment-provider.widget-warning {
-  color: #212529;
-  background-color: #ffc107;
-}
-
-.widget-payment-provider.widget-warning a {
-  color: #212529;
-}
-
-.widget-payment-provider.widget-danger {
-  color: #fff;
-  background-color: #dc3545;
-}
-
-.widget-payment-provider.widget-danger a {
-  color: #fff;
+.widget-payment-provider.widget-danger > .cmp-method-list .method-list-item > label, .widget-shipping-profile.widget-danger > .cmp-method-list .method-list-item > label {
+  box-shadow: inset 0 0 0 0.1rem #dc3545;
 }
 
 @media (max-width: 575.98px) {
