FIX default homepage

--- a/resources/views/PageDesign/Macros/IncludeComponents.twig
+++ b/resources/views/PageDesign/Macros/IncludeComponents.twig
@@ -1,5 +1,5 @@
 {% macro include_components() %}
-    {% include get_component_template() %}
+    {% include get_component_template() ignore missing %}
 
     {% if has_component_template() %}
         {{ _self.include_components() }}
