--- a/resources/views/Checkout/CheckoutCategory.twig
+++ b/resources/views/Checkout/CheckoutCategory.twig
@@ -10,8 +10,7 @@
 {% endblock %}
 
 {% block PageBody %}
-    <h1>CHECKOUT</h1>
-    {% set shopBuilderTemplate = shop_builder_category_template(category.id) %}
+    {% set shopBuilderTemplate = shop_builder_category_template(category.id, "checkout") %}
     {% if shopBuilderTemplate | trim is not empty %}
         <div class="container-max">
             <div class="row">
