--- a/resources/views/Widgets/WidgetComponents.twig
+++ b/resources/views/Widgets/WidgetComponents.twig
@@ -1,8 +1,6 @@
 {{ component( 'Ceres::LiveShopping.Components.LiveShoppingItem' ) }}
 {{ component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
 {{ component( "Ceres::Containers.Components.LastSeenItemList" ) }}
-<<<<<<< Updated upstream
 {{ component( "Ceres::Checkout.Components.ShippingProfileSelect" ) }}
-=======
 {{ component( "Ceres::Checkout.Components.PaymentProviderSelect" ) }}
->>>>>>> Stashed changes
+{{ component( "Ceres::Basket.Components.Coupon" ) }}
