--- a/resources/views/Basket/Components/Coupon.twig
+++ b/resources/views/Basket/Components/Coupon.twig
@@ -4,7 +4,7 @@
         <div class="input-group">
             <input type="text" class="form-control" v-model="couponCode" placeholder="{{ trans("Ceres::Template.couponEnterCoupon") }}" @keyup.enter="redeemCode()" :disabled="disabled">
             <span class="input-group-btn">
-                <button class="btn btn-primary btn-medium" type="button" @click="redeemCode()" :disabled="waiting" v-if="!disabled">
+                <button class="btn btn-primary btn-medium" :class="'btn-' + appearance" type="button" @click="redeemCode()" :disabled="waiting" v-if="!disabled">
                     <i v-waiting-animation="waiting" class="fa fa-gift" aria-hidden="true"></i>
                     {{ trans("Ceres::Template.couponRedeem") }}
                 </button>
