--- a/resources/views/Widgets/Checkout/BasketTotalsWidget.twig
+++ b/resources/views/Widgets/Checkout/BasketTotalsWidget.twig
@@ -1,13 +1,7 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
-{{ Twig.component( 'Ceres::Checkout.Components.ShippingProfileSelect' ) }}
+{{ Twig.component("Ceres::Basket.Components.BasketTotals") }}
 
 <div>
-    <header class="mb-3">
-        <h3>{{ trans("Ceres::Template.checkoutShippingProfile") }}</h3>
-    </header>
-
-    <div class="shipping-method-select">
-        <shipping-profile-select template="#vue-shipping-profile-select"></shipping-profile-select>
-    </div>
+    <basket-totals template="#vue-basket-totals"></basket-totals>
 </div>
