--- a/resources/views/Widgets/Checkout/ShippingProfileWidget.twig
+++ b/resources/views/Widgets/Checkout/ShippingProfileWidget.twig
@@ -1,11 +1,11 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
 {{ Twig.import("LayoutContainer", "Ceres::PageDesign.Macros.LayoutContainer") }}
-{{ Twig.component( 'Ceres::Checkout.Components.ShippingProfileSelect' ) }}
+{{ Twig.component("Ceres::Checkout.Components.ShippingProfileSelect") }}
 
 {{ Twig.set("overrideShippingProfiles", Twig.call("LayoutContainer.show", ["Ceres::Checkout.ShippingProfileList"])) }}
 
-<div class="widget widget-shipping-profile widget-{{ widget.settings.appearance.mobile | default('primary')  }}">
+<div class="widget widget-shipping-profile widget-{{ widget.settings.appearance.mobile | default("primary")  }}">
     <header class="mb-3">
         <h3>{{ trans("Ceres::Template.checkoutShippingProfile") }}</h3>
     </header>
