CHANGE Payment Widget - add hinttext param

--- a/resources/scss/ceres/widgets/Checkout/_payment-and-shipping-list-widget.scss
+++ b/resources/scss/ceres/widgets/Checkout/_payment-and-shipping-list-widget.scss
@@ -1,8 +1,11 @@
 @mixin widget-list-box-shadow($color)
 {
-    > .cmp-method-list .method-list-item > label
+    > .payment-method-select, > .shipping-method-select
     {
-        box-shadow: inset 0 0 0 0.1rem $color;
+        > .cmp-method-list .method-list-item > label
+        {
+            box-shadow: inset 0 0 0 0.1rem $color;
+        }
     }
 }
 
