--- a/resources/views/Widgets/Checkout/PaymentProviderWidget.twig
+++ b/resources/views/Widgets/Checkout/PaymentProviderWidget.twig
@@ -4,16 +4,23 @@
 {{ Twig.component("Ceres::Checkout.Components.PaymentProviderSelect") }}
 
 {{ Twig.set("overridePaymentList", Twig.call("LayoutContainer.show", ["Ceres::Checkout.PaymentList"])) }}
+{% set hinttext = widget.settings.hinttext.mobile %}
 
 <div class="widget widget-payment-provider widget-{{ widget.settings.appearance.mobile | default('primary')  }}">
     <header class="mb-3">
         <h3>{{ Twig.trans("Ceres::Template.checkoutPaymentMethod") }}</h3>
     </header>
 
+    {% if hinttext is not empty %}
+        <p class="small text-muted">{{ hinttext }}</p>
+    {% endif %}
+
     {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.BeforePaymentList"])) }}
 
     {{ Twig.if("overridePaymentList | trim is empty") }}
-        <payment-provider-select></payment-provider-select>
+        <div class="payment-method-select">
+            <payment-provider-select></payment-provider-select>
+        </div>
     {{ Twig.else() }}
         {{ Twig.print("overridePaymentList") }}
     {{ Twig.endif() }}
