--- a/resources/views/Widgets/Checkout/BasketTotalsWidget.twig
+++ b/resources/views/Widgets/Checkout/BasketTotalsWidget.twig
@@ -3,5 +3,7 @@
 {{ Twig.component("Ceres::Basket.Components.BasketTotals") }}
 
 <div>
+    {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.BeforeBasketTotals"])) }}
     <basket-totals template="#vue-basket-totals"></basket-totals>
+    {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.AfterBasketTotals"])) }}
 </div>
