FIX calculating header height after loading images

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -306,7 +306,7 @@
             var headerImages = header.querySelectorAll("img");
 
             Promise.all(
-                (Array.prototype.slice.call(headerImages).forEach(function(headerImage)
+                Array.prototype.slice.call(headerImages).map(function(headerImage)
                 {
                     return new Promise(function(resolve)
                     {
@@ -315,7 +315,7 @@
                             resolve();
                         }
                     });
-                }) || [])
+                })
             ).then(function()
             {
                 headerLoaded = true;
