--- a/resources/views/Widgets/WidgetComponents.twig
+++ b/resources/views/Widgets/WidgetComponents.twig
@@ -1,5 +1,6 @@
 {{ component( 'Ceres::LiveShopping.Components.LiveShoppingItem' ) }}
-{{ component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
-{{ component( "Ceres::Containers.Components.LastSeenItemList" ) }}
-{{ component( "Ceres::Checkout.Components.ShippingProfileSelect" ) }}
 {{ component( "Ceres::Checkout.Components.PaymentProviderSelect" ) }}
+{{ component( "Ceres::Checkout.Components.PlaceOrder" ) }}
+{{ component( "Ceres::Checkout.Components.ShippingProfileSelect" ) }}
+{{ component( "Ceres::Containers.Components.LastSeenItemList" ) }}
+{{ component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
