--- a/resources/views/Checkout/Components/PlaceOrder.twig
+++ b/resources/views/Checkout/Components/PlaceOrder.twig
@@ -6,7 +6,7 @@
         {% if buttonReplacement|trim is not empty %}
             {{ buttonReplacement }}
         {% else %}
-            <button class="btn btn-success btn-block" @click="placeOrder()" :disabled="waiting || isBasketLoading || !isBasketInitiallyLoaded">
+            <button class="btn btn-block" :class="buttonClasses" @click="placeOrder()" :disabled="waiting || isBasketLoading || !isBasketInitiallyLoaded">
                 <i v-waiting-animation="waiting" class="fa fa-arrow-right" aria-hidden="true"></i> {{ trans("Ceres::Template.checkoutBuyNow") }}
             </button>
         {% endif %}
