--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -19204,7 +19204,7 @@ html.ie .basket-preview-hover {
 {
     > .payment-method-select, > .shipping-method-select
     {
-        > .cmp-method-list .method-list-item > label
+        > .cmp-method-list .method-list-item > input:checked + label
         {
             -webkit-box-shadow: inset 0 0 0 0.1rem $color;
                     box-shadow: inset 0 0 0 0.1rem $color;
