--- a/resources/scss/ceres/widgets/Checkout/_payment-and-shipping-list-widget.scss
+++ b/resources/scss/ceres/widgets/Checkout/_payment-and-shipping-list-widget.scss
@@ -2,7 +2,7 @@
 {
     > .payment-method-select, > .shipping-method-select
     {
-        > .cmp-method-list .method-list-item > label
+        > .cmp-method-list .method-list-item > input:checked + label
         {
             box-shadow: inset 0 0 0 0.1rem $color;
         }
