--- a/resources/views/Basket/Components/BasketPreview.twig
+++ b/resources/views/Basket/Components/BasketPreview.twig
@@ -21,7 +21,7 @@
             <!-- BASKET LIST -->
             <div class="list col-sm-7 col-md-12 pt-3">
                 <div class="cmp cmp-basket-preview-list">
-                    <basket-list template="#vue-basket-list" size="small"></basket-list>
+                    <basket-list size="small"></basket-list>
                 </div>
             </div>
             <!-- ./BASKET LIST -->
