--- a/resources/views/Checkout/CheckoutView.twig
+++ b/resources/views/Checkout/CheckoutView.twig
@@ -131,7 +131,7 @@
                             <aside class="sidebar">
                                 <div class="cmp cmp-checkout-sidebar">
                                     <div class="cmp cmp-basket-preview-list">
-                                        <basket-list template="#vue-basket-list" size="small"></basket-list>
+                                        <basket-list size="small"></basket-list>
                                     </div>
                                     <hr>
                                     <coupon template="#vue-coupon"></coupon>
