--- a/resources/views/Widgets/WidgetComponents.twig
+++ b/resources/views/Widgets/WidgetComponents.twig
@@ -1,6 +1,7 @@
-{{ component( 'Ceres::LiveShopping.Components.LiveShoppingItem' ) }}
-{{ component( "Ceres::Checkout.Components.PaymentProviderSelect" ) }}
-{{ component( "Ceres::Checkout.Components.PlaceOrder" ) }}
-{{ component( "Ceres::Checkout.Components.ShippingProfileSelect" ) }}
-{{ component( "Ceres::Containers.Components.LastSeenItemList" ) }}
-{{ component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
+{{ component("Ceres::LiveShopping.Components.LiveShoppingItem") }}
+{{ component("Ceres::Basket.Components.BasketList") }}
+{{ component("Ceres::Checkout.Components.PaymentProviderSelect") }}
+{{ component("Ceres::Checkout.Components.PlaceOrder") }}
+{{ component("Ceres::Checkout.Components.ShippingProfileSelect") }}
+{{ component("Ceres::Containers.Components.LastSeenItemList") }}
+{{ component("Ceres::Newsletter.Components.NewsletterInput") }}
