--- a/resources/views/Basket/Basket.twig
+++ b/resources/views/Basket/Basket.twig
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-md-7">
                 <div class="col-12 pt-4 bg-white">
-                    <basket-list template="#vue-basket-list" size="large"></basket-list>
+                    <basket-list size="large"></basket-list>
                 </div>
             </div>
 
