CHANGE BasketWidget - add Twig.trans()

--- a/resources/views/Widgets/Checkout/BasketWidget.twig
+++ b/resources/views/Widgets/Checkout/BasketWidget.twig
@@ -4,7 +4,7 @@
 
 <div class="widget widget-basket">
     <div class="pt-4">
-        <h3>{{ trans("Ceres::Template.checkoutBasket") }}</h3>
+        <h3>{{ Twig.trans("Ceres::Template.checkoutBasket") }}</h3>
         <hr class="mb-0">
     </div>
     
