--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -2,10 +2,10 @@
 {% set homepageJson = getExternalContent("https://cdn02.plentymarkets.com/pmsbpnokwu6a/plugin/production/marketingresource/js/HomepageContent.json") %}
 {% set homepageData = homepageJson[currentLang] %}
 
-<div class="container-max mkt-homepage">
+<div class="container-max mkt-homepage" style="background-color:white;">
 
 
-Testcontent
+
 
 
     <div class="carousel slide" data-interval="5000" data-ride="carousel" id="carousel-example">
@@ -26,6 +26,9 @@ Testcontent
         <a class="right carousel-control" href="#carousel-example" data-slide="next"><i
                     class="icon-next fa fa-angle-right"></i></a>
     </div>
+    
+    
+    Testcontent
 
     <div class="row">
         <div class="col-lg-6">
