--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -5,7 +5,19 @@
 <div class="container-max mkt-homepage" style="background-color:white;">
 
 
-
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="http://www.beatinternet.de/content/banner1.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://www.beatinternet.de/content/banner2.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://www.beatinternet.de/content/banner3.png" alt="Third slide">
+    </div>
+  </div>
+</div>
 
 
     <div class="carousel slide" data-interval="5000" data-ride="carousel" id="carousel-example">
@@ -28,7 +40,7 @@
     </div>
     
     
-    Testcontent
+   
 
     <div class="row">
         <div class="col-lg-6">
