--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -52,7 +52,7 @@
     </div>
 
 
--->
+
     <hr class="my-2">
 
     <div class="row">
@@ -79,6 +79,6 @@
                 {% endfor %}
             </ul>
         </div>
-    </div>
+    </div>-->
 </div>
 
