--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -8,13 +8,13 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="http://www.beatinternet.de/content/startpage/banner1.png" alt="First slide">
+      <img class="d-block w-100" src="http://www.beatinternet.de/content/startpage/banner1.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="http://www.beatinternet.de/content/startpage/banner2.png" alt="Second slide">
+      <img class="d-block w-100" src="http://www.beatinternet.de/content/startpage/banner2.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="http://www.beatinternet.de/content/startpage/banner3.png" alt="Third slide">
+      <img class="d-block w-100" src="http://www.beatinternet.de/content/startpage/banner3.jpg" alt="Third slide">
     </div>
   </div>
 </div>
