--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -2,7 +2,7 @@
 {% set homepageJson = getExternalContent("https://cdn02.plentymarkets.com/pmsbpnokwu6a/plugin/production/marketingresource/js/HomepageContent.json") %}
 {% set homepageData = homepageJson[currentLang] %}
 
-<div class="container-max mkt-homepage" style="background-color:white;">
+<div class="container-max mkt-homepage" style="background-color:white;padding-top:50px;">
 
 
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
