--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -2,7 +2,7 @@
 {% set homepageJson = getExternalContent("https://cdn02.plentymarkets.com/pmsbpnokwu6a/plugin/production/marketingresource/js/HomepageContent.json") %}
 {% set homepageData = homepageJson[currentLang] %}
 
-<div class="container-max mkt-homepage" style="background-color:white;padding-top:50px;">
+<div class="container-max mkt-homepage" style="background-color:white;padding-top:50px;padding-bottom:50px;">
 
 
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -18,6 +18,96 @@
     </div>
   </div>
 </div>
+
+
+      <div class="col-xs-12 col-sm-4 text-xs-center" style="padding-top:12px;">
+<div style="text-align: left;">
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" >
+</div>
+                    </div>
+             <div class="col-xs-12 col-sm-4 text-xs-center" style="padding-top:12px;">
+<div style="text-align: left;">
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" >
+</div>
+                    </div>
+                    
+                      
+<div class="col-xs-12 col-sm-4 text-xs-center" style="padding-top:12px;">
+<div style="text-align: left;">
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" >
+</div>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!--
     <div class="carousel slide" data-interval="5000" data-ride="carousel" id="carousel-example">
